--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "react": "^16.10.2",
+    "nodemon": "^1.19.4",
+    "react": "^16.11.0",
     "react-dom": "^16.10.2",
     "react-map-gl": "^5.0.12",
     "react-router": "^5.1.2",
@@ -31,5 +32,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://git.generalassemb.ly/maluccio/website-fix.git"
+  },
+  "author": "",
+  "license": "ISC"
 }
